crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__error_endless.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"hello"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `"` to close `"`.
   ╭─[src/Main.nash:1:7]
 1 │ "hello
   · ┬     ┬
   · │     ╰── expected `"`
   · ╰── opened here
   ╰────
  help: Add `"` here.
