crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__error_overflowing_unicode_escape.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"\\u{FFFFFFFFF}\""
---
String(
    Escape(
        BadUnicodeCode(
            12,
        ),
    ),
    1,
    3,
)
