crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__raw_unicode.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"é漢😀\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Str(
        "é漢😀",
    ),
}
