crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__unicode_with_escape.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"é\\n漢\\u{1F600}\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 19,
        },
    },
    value: Str(
        "é\n漢😀",
    ),
}
